Implemented full screen capabilities for image depiction as well as touch scroll and pinch zoom.

--- a/PrivacyFriendlyCameraRuler/app/src/main/res/layout/fragment_camera.xml
+++ b/PrivacyFriendlyCameraRuler/app/src/main/res/layout/fragment_camera.xml
@@ -4,8 +4,10 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/pictureView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"/>
+
+        <ImageView
+            android:id="@+id/pictureView"
+            android:layout_width="fill_parent"
+            android:layout_height="fill_parent"
+            android:scaleType="matrix"/>
 </FrameLayout>
