--- a/PrivacyFriendlyCameraRuler/app/src/main/res/menu/main.xml
+++ b/PrivacyFriendlyCameraRuler/app/src/main/res/menu/main.xml
@@ -11,4 +11,19 @@
         android:orderInCategory="100"
         android:title="@string/action_resetcalibration"
         app:showAsAction="never" />
+    <item
+        android:id="@+id/action_newRefObject"
+        android:orderInCategory="100"
+        android:title="@string/action_newRefObject"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_newLine"
+        android:orderInCategory="100"
+        android:title="@string/action_newLine"
+        app:showAsAction="never" />
+    <item
+        android:id="@+id/action_newArea"
+        android:orderInCategory="100"
+        android:title="@string/action_newArea"
+        app:showAsAction="never" />
 </menu>
