--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -4,13 +4,13 @@
     <group android:id="@+id/nav_group_main"
         android:checkableBehavior="all">
         <item
-            android:id="@+id/nav_example"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/action_main" />
+            android:id="@+id/nav_ruler"
+            android:icon="@drawable/ic_menu_ruler"
+            android:title="@string/action_ruler" />
         <item
-            android:id="@+id/nav_game"
-            android:icon="@drawable/ic_menu_gallery"
-            android:title="@string/action_game" />
+            android:id="@+id/nav_camera"
+            android:icon="@drawable/ic_menu_camera"
+            android:title="@string/action_camera" />
     </group>
 
     <group android:id="@+id/nav_group_add"
