Put settings and help from the ruler app in here. Changed the inheritance structure.

--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -13,24 +13,20 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        tools:context="org.secuso.privacyfriendlyexample.HelpActivity">
+        tools:context="org.secuso.privacyfriendlyexample.CameraActivity">
 
         <include layout="@layout/toolbar"/>
 
         <LinearLayout
-            android:id="@+id/main_content"
+            android:id="@+id/camera_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@color/white"
+            android:background="#FFFFFF"
             android:fitsSystemWindows="true"
-            android:layout_marginTop="?attr/actionBarSize"
             android:orientation="vertical"
-            tools:context=".HelpActivity"
+            tools:context=".CameraActivity"
+            android:layout_marginTop="?attr/actionBarSize"
             android:weightSum="1">
-            <fragment android:name="org.secuso.privacyfriendlycameraruler.HelpActivity$HelpFragment"
-                android:id="@+id/help_fragment"
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"/>
 
         </LinearLayout>
 
