Integrated the complete ruler and calibration functionality from ruler app.

--- a/app/src/main/res/layout/activity_ruler.xml
+++ b/app/src/main/res/layout/activity_ruler.xml
@@ -17,7 +17,7 @@
 
         <include layout="@layout/toolbar"/>
 
-        <LinearLayout
+        <RelativeLayout
             android:id="@+id/ruler_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
@@ -28,7 +28,7 @@
             android:layout_marginTop="?attr/actionBarSize"
             android:weightSum="1">
 
-        </LinearLayout>
+        </RelativeLayout>
 
     </android.support.design.widget.CoordinatorLayout>
 
