Renamed the calibration action menu to have a more expressive name.

--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        tools:context="org.secuso.privacyfriendlyexample.CameraActivity">
+        tools:context="org.secuso.privacyfriendlycameraruler.CameraActivity">
 
         <include layout="@layout/toolbar"/>
 
