--- a/app/src/main/res/layout/activity_ruler.xml
+++ b/app/src/main/res/layout/activity_ruler.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        tools:context="org.secuso.privacyfriendlyexample.RulerActivity">
+        tools:context="org.secuso.privacyfriendlycameraruler.RulerActivity">
 
         <include layout="@layout/toolbar"/>
 
