--- a/app/src/main/res/layout/activity_help.xml
+++ b/app/src/main/res/layout/activity_help.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        tools:context="org.secuso.privacyfriendlyexample.HelpActivity">
+        tools:context="org.secuso.privacyfriendlycameraruler.HelpActivity">
 
         <include layout="@layout/toolbar"/>
 
