--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -52,11 +52,17 @@
 
         <ImageView
             android:id="@+id/pictureView"
-            android:layout_width="fill_parent"
-            android:layout_height="fill_parent"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:src="@color/middleblue"
             android:visibility="gone"
             android:scaleType="matrix"/>
+
+        <View
+            android:id="@+id/drawView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:visibility="gone"/>
 
     </android.support.design.widget.CoordinatorLayout>
 
