--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
@@ -15,54 +14,60 @@
         android:fitsSystemWindows="true"
         tools:context="org.secuso.privacyfriendlycameraruler.CameraActivity">
 
-        <include layout="@layout/toolbar"/>
+        <include layout="@layout/toolbar" />
 
         <LinearLayout
             android:id="@+id/camera_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="?attr/actionBarSize"
             android:background="#FFFFFF"
             android:fitsSystemWindows="true"
             android:orientation="vertical"
-            tools:context=".CameraActivity"
-            android:layout_marginTop="?attr/actionBarSize"
-            android:weightSum="1">
+            android:weightSum="1"
+            tools:context=".CameraActivity">
 
             <ImageButton
-                android:layout_width="200dp"
-                android:layout_height="200dp"
                 android:id="@+id/from_camera_button"
-                android:layout_gravity="center"
-                android:layout_marginTop="35dp"
-                android:src="@drawable/ic_menu_camera"
-                android:scaleType="fitCenter"
-                android:background="@drawable/button_fullwidth" />
-
-            <ImageButton
                 android:layout_width="200dp"
                 android:layout_height="200dp"
-                android:id="@+id/from_gallery_button"
                 android:layout_gravity="center"
                 android:layout_marginTop="35dp"
-                android:src="@drawable/ic_menu_gallery"
+                android:background="@drawable/button_fullwidth"
                 android:scaleType="fitCenter"
-                android:background="@drawable/button_fullwidth" />
+                android:src="@drawable/ic_menu_camera" />
+
+            <ImageButton
+                android:id="@+id/from_gallery_button"
+                android:layout_width="200dp"
+                android:layout_height="200dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="35dp"
+                android:background="@drawable/button_fullwidth"
+                android:scaleType="fitCenter"
+                android:src="@drawable/ic_menu_gallery" />
+
+            <ImageView
+                android:id="@+id/pictureView"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:scaleType="matrix"
+                android:src="@color/middleblue"
+                android:visibility="gone" />
 
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/pictureView"
+        <RelativeLayout
+            android:id="@+id/camera_ruler_layout"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:src="@color/middleblue"
-            android:visibility="gone"
-            android:scaleType="matrix"/>
+            android:layout_marginTop="?attr/actionBarSize"
+            android:fitsSystemWindows="true"
+            android:orientation="vertical"
+            android:weightSum="1"
+            tools:context=".CameraActivity">
 
-        <View
-            android:id="@+id/drawView"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:visibility="gone"/>
+        </RelativeLayout>
 
     </android.support.design.widget.CoordinatorLayout>
 
