--- a/app/src/main/res/layout/activity_ruler.xml
+++ b/app/src/main/res/layout/activity_ruler.xml
@@ -1,6 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.v4.widget.DrawerLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/drawer_layout"
@@ -15,18 +14,18 @@
         android:fitsSystemWindows="true"
         tools:context="org.secuso.privacyfriendlycameraruler.RulerActivity">
 
-        <include layout="@layout/toolbar"/>
+        <include layout="@layout/toolbar" />
 
         <RelativeLayout
             android:id="@+id/ruler_content"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_marginTop="?attr/actionBarSize"
             android:background="#FFFFFF"
             android:fitsSystemWindows="true"
             android:orientation="vertical"
-            tools:context=".RulerActivity"
-            android:layout_marginTop="?attr/actionBarSize"
-            android:weightSum="1">
+            android:weightSum="1"
+            tools:context=".RulerActivity">
 
         </RelativeLayout>
 
