--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -2,6 +2,7 @@
 <android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:fab="http://schemas.android.com/apk/res-auto"
     android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -68,6 +69,47 @@
             tools:context=".CameraActivity">
 
         </RelativeLayout>
+
+        <com.getbase.floatingactionbutton.FloatingActionsMenu
+            android:id="@+id/new_measure_fam"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|end"
+            android:layout_margin="@dimen/fab_margin"
+            android:visibility="gone">
+
+            <com.getbase.floatingactionbutton.FloatingActionButton
+                android:id="@+id/new_tetragon_fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                fab:fab_title="@string/new_tetragon"
+                fab:fab_size="mini"
+                fab:fab_icon="@drawable/ic_tetragon"/>
+
+            <com.getbase.floatingactionbutton.FloatingActionButton
+                android:id="@+id/new_triangle_fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                fab:fab_title="@string/new_triangle"
+                fab:fab_size="mini"
+                fab:fab_icon="@drawable/ic_triangle"/>
+
+            <com.getbase.floatingactionbutton.FloatingActionButton
+                android:id="@+id/new_circle_fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                fab:fab_title="@string/new_circle"
+                fab:fab_size="mini"
+                fab:fab_icon="@drawable/ic_circle"/>
+
+            <com.getbase.floatingactionbutton.FloatingActionButton
+                android:id="@+id/new_line_fab"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                fab:fab_title="@string/new_line"
+                fab:fab_size="mini"
+                fab:fab_icon="@drawable/ic_line"/>
+        </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
     </android.support.design.widget.CoordinatorLayout>
 
