--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -111,6 +111,20 @@
                 fab:fab_icon="@drawable/ic_line"/>
         </com.getbase.floatingactionbutton.FloatingActionsMenu>
 
+        <TextView
+            android:id="@+id/output_tf"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom|start"
+            android:text=""
+            android:textSize="20dp"
+            android:textStyle="bold"
+            android:layout_margin="10dp"
+            android:background="@color/halftransparentgrey"
+            android:textColor="@color/darkblue"
+            android:padding="4dp"
+            android:visibility="gone"/>
+
     </android.support.design.widget.CoordinatorLayout>
 
     <android.support.design.widget.NavigationView
