--- a/app/src/main/res/layout/activity_camera.xml
+++ b/app/src/main/res/layout/activity_camera.xml
@@ -13,7 +13,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true"
-        tools:context="org.secuso.privacyfriendlycameraruler.CameraActivity">
+        tools:context="org.secuso.privacyfriendlycameraruler.cameraruler.CameraActivity">
 
         <include layout="@layout/toolbar" />
 
@@ -26,7 +26,7 @@
             android:fitsSystemWindows="true"
             android:orientation="vertical"
             android:weightSum="1"
-            tools:context=".CameraActivity">
+            tools:context=".cameraruler.CameraActivity">
 
             <ImageButton
                 android:id="@+id/from_camera_button"
@@ -66,7 +66,7 @@
             android:fitsSystemWindows="true"
             android:orientation="vertical"
             android:weightSum="1"
-            tools:context=".CameraActivity">
+            tools:context=".cameraruler.CameraActivity">
 
         </RelativeLayout>
 
