Settings and Help updated. Removed setting related to automatic circle detection. Added help texts about the camera ruler functionality and the settings associated with it.

--- a/app/src/main/res/xml/pref_general.xml
+++ b/app/src/main/res/xml/pref_general.xml
@@ -52,10 +52,10 @@
             android:title="@string/pref_edit_user_def_refs"
             />
 
-        <SwitchPreference
-            android:key="pref_autodetect"
-            android:title="@string/pref_autodetect"
-            android:defaultValue="false"/>
+        <!--<SwitchPreference-->
+            <!--android:key="pref_autodetect"-->
+            <!--android:title="@string/pref_autodetect"-->
+            <!--android:defaultValue="false"/>-->
 
     </PreferenceCategory>
 
