--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -21,7 +21,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
 
-            android:src="@mipmap/icon"/>
+            android:src="@mipmap/launchericon_tapemeasure"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
