--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -13,4 +13,5 @@
     <dimen name="slide_desc">16dp</dimen>
     <dimen name="slide_actions">20dp</dimen>
     <dimen name="desc_padding">40dp</dimen>
+    <dimen name="tutorial_img_width_height">200dp</dimen>
 </resources>
