--- a/app/src/main/res/layout/activity_about.xml
+++ b/app/src/main/res/layout/activity_about.xml
@@ -116,6 +116,7 @@
             android:text="@string/more_info" />
 
         <TextView
+            android:id="@+id/secusoWebsite"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
@@ -123,6 +124,7 @@
             android:textStyle="bold" />
 
         <TextView
+            android:id="@+id/githubURL"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_gravity="center_horizontal"
